169. Downloading and preparing data for our biggest experiment yet (Model 4)

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -4000,12 +4000,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zqp9GN9fpvnY",
-        "outputId": "c13a9f9f-4a19-4561-9ba7-ca82b1630b46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
-        }
+        },
+        "id": "Zqp9GN9fpvnY",
+        "outputId": "c13a9f9f-4a19-4561-9ba7-ca82b1630b46"
       },
       "source": [
         "compare_history(original_history=history_10_percent_data_aug, \n",
@@ -4042,6 +4042,156 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xyoW3ov0tKJg"
+      },
+      "source": [
+        "## Model 4 : Fine-tuning and existing model on all of the data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XUc2l5rntYVv",
+        "outputId": "02404539-5d32-4920-c25c-7a79b5b36a93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Download and unzip 10 classes of Food101 data with all images\n",
+        "! wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+        "\n",
+        "unzip_data(\"10_food_classes_all_data.zip\")"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-17 18:25:50--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 172.217.13.80, 172.217.13.240, 172.217.15.80, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|172.217.13.80|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 519183241 (495M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_all_data.zip’\n",
+            "\n",
+            "10_food_classes_all 100%[===================>] 495.13M   242MB/s    in 2.0s    \n",
+            "\n",
+            "2021-07-17 18:25:52 (242 MB/s) - ‘10_food_classes_all_data.zip’ saved [519183241/519183241]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6cu5IsdjtsO7",
+        "outputId": "29fd5f9d-e4e7-496b-b22c-56d8c11cd56a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "walk_through_dir(\"10_food_classes_all_data\")"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "There are 2 directories and 0 images in '10_food_classes_all_data'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_all_data/test'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/chicken_curry'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/fried_rice'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_all_data/test/ramen'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_all_data/train'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/hamburger'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/grilled_salmon'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/pizza'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/chicken_curry'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/sushi'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/ice_cream'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/fried_rice'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/chicken_wings'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/steak'.\n",
+            "There are 0 directories and 750 images in '10_food_classes_all_data/train/ramen'.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F6_qjLKet93r"
+      },
+      "source": [
+        "# Setup training and test dir\n",
+        "train_dir_all_data = \"10_food_classes_all_data/train/\"\n",
+        "test_dir = \"10_food_classes_all_data/test/\""
+      ],
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AnPoZCnXuL42",
+        "outputId": "616c6ea5-e16e-4461-f696-4e24a30681e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# # Set data inputs\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "IMG_SIZE=(224, 224)\n",
+        "train_data_10_classes_full = tf.keras.preprocessing.image_dataset_from_directory(train_dir_all_data,\n",
+        "                                                                                 label_mode=\"categorical\",\n",
+        "                                                                                 image_size=IMG_SIZE,\n",
+        "                                                                                 batch_size=BATCH_SIZE\n",
+        "                                                                                 )\n",
+        "test_data = tf.keras.preprocessing.image_dataset_from_directory(test_dir_all_data,\n",
+        "                                                                label_mode=\"categorical\",\n",
+        "                                                                image_size=IMG_SIZE,\n",
+        "                                                                batch_size=BATCH_SIZE)\n"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 7500 files belonging to 10 classes.\n",
+            "Found 2500 files belonging to 10 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mKkg-d6CwDW2"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
