172. Comparing our modelling experiment results in TensorBoard

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -4805,6 +4805,90 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EYTvEjmq6cLm"
+      },
+      "source": [
+        "## Viewing our experiment data on TensorBoard\n",
+        "> **Note** : Anything you upload to TensorBoard.dev is going to be public. So if you have private data, do not upload."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_h8j0C0A7whj",
+        "outputId": "f15778f6-b562-4323-95de-eefcad97c52d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# View tensorboard logs of transfer learning modelling experiments(should be ~4 models)\n",
+        "# Upload TensorBoard dev records\n",
+        "\n",
+        "!tensorboard dev upload --logdir ./transfer_learning \\\n",
+        "  --name \"Transfer Learning Experiments with 10 Food101 Classes\"\\\n",
+        "  --description \"A series of different transfer learning experiments with varying amounts of data and fine-tuning.\"\\\n",
+        "  --one_shot # exits the uploader once its finished uploading"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-18 04:51:19.722424: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "\n",
+            "***** TensorBoard Uploader *****\n",
+            "\n",
+            "This will upload your TensorBoard logs to https://tensorboard.dev/ from\n",
+            "the following directory:\n",
+            "\n",
+            "./transfer_learning\n",
+            "\n",
+            "This TensorBoard will be visible to everyone. Do not upload sensitive\n",
+            "data.\n",
+            "\n",
+            "Your use of this service is subject to Google's Terms of Service\n",
+            "<https://policies.google.com/terms> and Privacy Policy\n",
+            "<https://policies.google.com/privacy>, and TensorBoard.dev's Terms of Service\n",
+            "<https://tensorboard.dev/policy/terms/>.\n",
+            "\n",
+            "This notice will not be shown again while you are logged into the uploader.\n",
+            "To log out, run `tensorboard dev auth revoke`.\n",
+            "\n",
+            "Continue? (yes/NO) yes\n",
+            "\n",
+            "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=373649185512-8v619h5kft38l4456nm2dj4ubeqsrvh6.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email&state=JXKakC4IqIw63U6lV38uC7BKh8VKN9&prompt=consent&access_type=offline\n",
+            "Enter the authorization code: 4/1AX4XfWiPNSOSp1yihw4JUTX5DsIEzNy-jc351hAre5xBiUQeDThPiC4Skaw\n",
+            "\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "\n",
+            "New experiment created. View your TensorBoard at: https://tensorboard.dev/experiment/4T8luPSLTO6qMGVCk7s2jQ/\n",
+            "\n",
+            "\u001b[1m[2021-07-18T04:52:01]\u001b[0m Started scanning logdir.\n",
+            "\u001b[1m[2021-07-18T04:52:05]\u001b[0m Total uploaded: 132 scalars, 0 tensors, 4 binary objects (3.2 MB)\n",
+            "\u001b[1m[2021-07-18T04:52:05]\u001b[0m Done scanning logdir.\n",
+            "\n",
+            "\n",
+            "Done. View your TensorBoard at https://tensorboard.dev/experiment/4T8luPSLTO6qMGVCk7s2jQ/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nyBTCVCm9SF2"
+      },
+      "source": [
+        "My TensorBoard experiments are available at : https://tensorboard.dev/experiment/4T8luPSLTO6qMGVCk7s2jQ/"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
