--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -4889,6 +4889,68 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cs26lXvn_zmD",
+        "outputId": "0cab970f-fe44-4405-80fb-e6ef3d667380",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!tensorboard dev list"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-18 05:03:27.646630: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "https://tensorboard.dev/experiment/4T8luPSLTO6qMGVCk7s2jQ/\n",
+            "\tName                 Transfer Learning Experiments with 10 Food101 Classes\n",
+            "\tDescription          A series of different transfer learning experiments with varying amounts of data and fine-tuning.\n",
+            "\tId                   4T8luPSLTO6qMGVCk7s2jQ\n",
+            "\tCreated              2021-07-18 04:52:01 (11 minutes ago)\n",
+            "\tUpdated              2021-07-18 04:52:05 (11 minutes ago)\n",
+            "\tRuns                 8\n",
+            "\tTags                 5\n",
+            "\tScalars              132\n",
+            "\tTensor bytes         0\n",
+            "\tBinary object bytes  3370415\n",
+            "Total: 1 experiment(s)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U9Of438C_21Z",
+        "outputId": "1be4e3df-d8d4-4f49-e793-7bdc376d0661",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# To delete an experiment\n",
+        "!tensorboard dev delete --experiment_id 4T8luPSLTO6qMGVCk7s2jQ"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-18 05:04:12.019279: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "Deleted experiment 4T8luPSLTO6qMGVCk7s2jQ.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
