177. Outlining the model we're going to build and building a ModelCheckpoint callback

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -47,11 +47,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IhSgWlF1qnzo",
-        "outputId": "9d0804d0-be3d-4192-d74b-b9951e242b4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IhSgWlF1qnzo",
+        "outputId": "9d0804d0-be3d-4192-d74b-b9951e242b4a"
       },
       "source": [
         "# Check to see if we're using a GPU\n",
@@ -101,11 +101,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M87pkgNOrrrj",
-        "outputId": "a9a046cd-1e6d-492d-f194-9fbec4bf74b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M87pkgNOrrrj",
+        "outputId": "a9a046cd-1e6d-492d-f194-9fbec4bf74b4"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
@@ -158,11 +158,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1tjolfk9suTW",
-        "outputId": "b95e03ff-9081-4dca-ecdc-f60555c859e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1tjolfk9suTW",
+        "outputId": "b95e03ff-9081-4dca-ecdc-f60555c859e9"
       },
       "source": [
         "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/101_food_classes_10_percent.zip\n",
@@ -204,11 +204,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_1vjuU6ctJDs",
-        "outputId": "54b39bf2-cf81-48d0-b0e9-bfca536ebe5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_1vjuU6ctJDs",
+        "outputId": "54b39bf2-cf81-48d0-b0e9-bfca536ebe5c"
       },
       "source": [
         "# How many images/classes are there?\n",
@@ -432,11 +432,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8KSQlxAOtS22",
-        "outputId": "fbce2057-86eb-421e-c249-b1074bf76b2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8KSQlxAOtS22",
+        "outputId": "fbce2057-86eb-421e-c249-b1074bf76b2c"
       },
       "source": [
         "# Setup data inputs\n",
@@ -466,6 +466,39 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bEAah0bUv685"
+      },
+      "source": [
+        "## Train a big dog model with transfer learning on 10% of 101 food classes\n",
+        "Here are the steps we're going to take :\n",
+        "* Create a ModelCheckpoint callback\n",
+        "* Create data augmentation layer to build data augmentation right into model\n",
+        "* Build a headless (no top layers) Functional EfficientNetB0 backboned-model ( we'll create our own output layer)\n",
+        "* Compile our model\n",
+        "* Feature extract for 5 full passes (5 epochs on the train dataset and validate on 15% of the test data, to save epoch time)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c0U5Ay4ywgSL"
+      },
+      "source": [
+        "# Create  checkpoint callback\n",
+        "\n",
+        "checkpoint_path=\"101_classes_10_percent_data_model_checkpoint\"\n",
+        "checkpoint_callback  = tf.keras.callbacks.ModelCheckpoint(checkpoint_path,                                                          \n",
+        "                                                          save_weights_only=True,\n",
+        "                                                          monitor=\"val_accuracy\",\n",
+        "                                                          save_best_only=True,\n",
+        "                                                          save_freq=\"epoch\")\n"
+      ],
+      "execution_count": 15,
+      "outputs": []
     }
   ]
 }
