178. Creating a data augmentation layer to use with our model

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -499,6 +499,30 @@
       ],
       "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qnkBKAZFzwj7"
+      },
+      "source": [
+        "# Create data augmentation layer to incorporate it right into the model\n",
+        "\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers.experimental import preprocessing\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "\n",
+        "data_augmentation = Sequential([\n",
+        "              preprocessing.RandomFlip(\"horizontal\"),\n",
+        "              preprocessing.RandomRotation(0.2),\n",
+        "              preprocessing.RandomHeight(0.2),\n",
+        "              preprocessing.RandomWidth(0.2),\n",
+        "              preprocessing.RandomZoom(0.2),\n",
+        "              #preprocessing.Rescaling(1/255.), # rescale inputs of images to between 0 & 1, required for model like ResNet50              \n",
+        "            ], name=\"data_augmentation\")"
+      ],
+      "execution_count": 17,
+      "outputs": []
     }
   ]
 }
