179. Creating a headless EfficientNetB0 model with data augmentation built in

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -497,7 +497,7 @@
         "                                                          save_best_only=True,\n",
         "                                                          save_freq=\"epoch\")\n"
       ],
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -521,7 +521,87 @@
         "              #preprocessing.Rescaling(1/255.), # rescale inputs of images to between 0 & 1, required for model like ResNet50              \n",
         "            ], name=\"data_augmentation\")"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NmczPrm88bmG"
+      },
+      "source": [
+        "# Setup the base model and freeze its layers(this will extract features)\n",
+        "\n",
+        "base_model = tf.keras.applications.EfficientNetB0(include_top=False)\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "# Setup  model architectures with trainable top layers\n",
+        "inputs = layers.Input(shape=(224, 224, 3), name=\"input_layer\")\n",
+        "\n",
+        "x = data_augmentation(inputs) # augment images (only happens during the training phase)\n",
+        "\n",
+        "x = base_model(x, training = False) # put the base model in inference mode, so weights which need to stay frozen, stay frozen\n",
+        "\n",
+        "x = layers.GlobalAvgPool2D(name=\"global_avg_pool_layer\")(x)\n",
+        "\n",
+        "# For layers, the inputs or x goes outside. For model it can go inside \n",
+        "outputs = layers.Dense(len(train_data_all_10_percent.class_names), activation=\"softmax\", name=\"output_layer\") (x)\n",
+        "\n",
+        "model = tf.keras.Model(inputs, outputs)\n"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GyHabhE9Arjp",
+        "outputId": "8e9b3f7b-d7d7-4bdd-dabf-e9774a29c8fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get a summary of model we've created\n",
+        "model.summary()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_layer (InputLayer)     [(None, 224, 224, 3)]     0         \n",
+            "_________________________________________________________________\n",
+            "data_augmentation (Sequentia (None, None, None, 3)     0         \n",
+            "_________________________________________________________________\n",
+            "efficientnetb0 (Functional)  (None, None, None, 1280)  4049571   \n",
+            "_________________________________________________________________\n",
+            "global_avg_pool_layer (Globa (None, 1280)              0         \n",
+            "_________________________________________________________________\n",
+            "output_layer (Dense)         (None, 101)               129381    \n",
+            "=================================================================\n",
+            "Total params: 4,178,952\n",
+            "Trainable params: 129,381\n",
+            "Non-trainable params: 4,049,571\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n2Wn3f6uApBX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
