--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -555,11 +555,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GyHabhE9Arjp",
-        "outputId": "8e9b3f7b-d7d7-4bdd-dabf-e9774a29c8fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GyHabhE9Arjp",
+        "outputId": "8e9b3f7b-d7d7-4bdd-dabf-e9774a29c8fb"
       },
       "source": [
         "# Get a summary of model we've created\n",
@@ -588,6 +588,38 @@
             "Trainable params: 129,381\n",
             "Non-trainable params: 4,049,571\n",
             "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ofXDaGXLB7az",
+        "outputId": "51fd78b1-9a22-4402-eca1-0276b26eed93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Compile our model\n",
+        "model.compile(loss=\"categorical_crossentropy\",\n",
+        "             optimizer=tf.keras.optimizers.Adam(),\n",
+        "             metrics=[\"accuracy\"])\n",
+        "\n",
+        "history_all_classes_10_percent = model.fit(train_data_all_10_percent, \n",
+        "                                           epochs=5, # fit for epochs to keep experiment quick\n",
+        "                                           validation_data = test_data,\n",
+        "                                           validation_steps = int(0.15 *len(test_data)), # validate on only 15% of the data during training\n",
+        "                                           callbacks=[checkpoint_callback])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n"
           ],
           "name": "stdout"
         }
