--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -596,11 +596,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ofXDaGXLB7az",
-        "outputId": "51fd78b1-9a22-4402-eca1-0276b26eed93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ofXDaGXLB7az",
+        "outputId": "51fd78b1-9a22-4402-eca1-0276b26eed93"
       },
       "source": [
         "# Compile our model\n",
@@ -614,16 +614,73 @@
         "                                           validation_steps = int(0.15 *len(test_data)), # validate on only 15% of the data during training\n",
         "                                           callbacks=[checkpoint_callback])"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/5\n"
+            "Epoch 1/5\n",
+            "237/237 [==============================] - 122s 368ms/step - loss: 3.4656 - accuracy: 0.2511 - val_loss: 2.6215 - val_accuracy: 0.4237\n",
+            "Epoch 2/5\n",
+            "237/237 [==============================] - 71s 300ms/step - loss: 2.3400 - accuracy: 0.4663 - val_loss: 2.2084 - val_accuracy: 0.4701\n",
+            "Epoch 3/5\n",
+            "237/237 [==============================] - 65s 275ms/step - loss: 1.9801 - accuracy: 0.5312 - val_loss: 2.0165 - val_accuracy: 0.5021\n",
+            "Epoch 4/5\n",
+            "237/237 [==============================] - 60s 253ms/step - loss: 1.7574 - accuracy: 0.5715 - val_loss: 1.9457 - val_accuracy: 0.5124\n",
+            "Epoch 5/5\n",
+            "237/237 [==============================] - 61s 256ms/step - loss: 1.6024 - accuracy: 0.6114 - val_loss: 1.8899 - val_accuracy: 0.5167\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a0Rrb5aSDR1r",
+        "outputId": "4e68557a-bd24-4c32-e1c7-5aa1d22e17fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate the model\n",
+        "model.evaluate(test_data)\n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "790/790 [==============================] - 90s 113ms/step - loss: 1.7108 - accuracy: 0.5525\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.710819959640503, 0.5525148510932922]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "14wjzzehDVdf"
+      },
+      "source": [
+        "# Plot loss curves\n",
+        "plot_loss_curves(history_all_clases_10_percent)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
