182. Fine-tuning our feature extraction model and evaluating its performance

--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -609,11 +609,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ofXDaGXLB7az",
-        "outputId": "33d1fe72-9f32-4e21-ea70-9d5920a409c3"
+        "id": "ofXDaGXLB7az"
       },
       "source": [
         "# Compile our model\n",
@@ -627,25 +623,8 @@
         "                                           validation_steps = int(0.15 *len(test_data)), # validate on only 15% of the data during training\n",
         "                                           callbacks=[checkpoint_callback])"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/5\n",
-            "237/237 [==============================] - 123s 371ms/step - loss: 3.4804 - accuracy: 0.2411 - val_loss: 2.6649 - val_accuracy: 0.4055\n",
-            "Epoch 2/5\n",
-            "237/237 [==============================] - 74s 311ms/step - loss: 2.3507 - accuracy: 0.4611 - val_loss: 2.2138 - val_accuracy: 0.4701\n",
-            "Epoch 3/5\n",
-            "237/237 [==============================] - 66s 278ms/step - loss: 1.9819 - accuracy: 0.5341 - val_loss: 2.0849 - val_accuracy: 0.4791\n",
-            "Epoch 4/5\n",
-            "237/237 [==============================] - 64s 267ms/step - loss: 1.7636 - accuracy: 0.5707 - val_loss: 1.9694 - val_accuracy: 0.4989\n",
-            "Epoch 5/5\n",
-            "237/237 [==============================] - 60s 252ms/step - loss: 1.6211 - accuracy: 0.6008 - val_loss: 1.9271 - val_accuracy: 0.5013\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -658,7 +637,7 @@
       },
       "source": [
         "# Evaluate the model\n",
-        "model.evaluate(test_data)\n"
+        "feature_extraction_results = model.evaluate(test_data)\n"
       ],
       "execution_count": 13,
       "outputs": [
@@ -775,17 +754,17 @@
         "              optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001), # learning rate lowered by 10%\n",
         "              metrics=[\"accuracy\"])"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n6F4C7Lc4C1s",
-        "outputId": "5ff6445b-fe33-4908-c3d1-d1a0356ed2f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n6F4C7Lc4C1s",
+        "outputId": "5ff6445b-fe33-4908-c3d1-d1a0356ed2f8"
       },
       "source": [
         "# what layers in model are trainable ?\n",
@@ -810,11 +789,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WlhqkO9q4cyL",
-        "outputId": "d1dd7612-354e-4a89-ecdb-45e77bda232a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WlhqkO9q4cyL",
+        "outputId": "d1dd7612-354e-4a89-ecdb-45e77bda232a"
       },
       "source": [
         "# Check with layers are trainable in our base model\n",
@@ -1071,10 +1050,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rcoX5dxX40Ee"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rcoX5dxX40Ee",
+        "outputId": "e86bfaa7-b4e1-4536-b57a-d1dc59f33973"
       },
       "source": [
-        "# Fit the model with "
+        "# Fit the model for another 5 more epochs\n",
+        "fine_tune_epochs = 10 # Model has already done 5 epochs(feature extraction), this is total number of epochs we'are after (5 + 5 = 10)\n",
+        "\n",
+        "# Fine-tune our models\n",
+        "history_all_classes_10_percent_fine_tune = model.fit(train_data_all_10_percent,\n",
+        "                                                     epochs = fine_tune_epochs,\n",
+        "                                                     validation_data = test_data,\n",
+        "                                                     validation_steps = int(0.15 * len(test_data)),\n",
+        "                                                     initial_epoch=history_all_classes_10_percent.epoch[-1])\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 5/10\n",
+            "237/237 [==============================] - 66s 249ms/step - loss: 1.2664 - accuracy: 0.6709 - val_loss: 1.9242 - val_accuracy: 0.5003\n",
+            "Epoch 6/10\n",
+            "237/237 [==============================] - 56s 234ms/step - loss: 1.1540 - accuracy: 0.6968 - val_loss: 1.9042 - val_accuracy: 0.5135\n",
+            "Epoch 7/10\n",
+            "237/237 [==============================] - 55s 229ms/step - loss: 1.0882 - accuracy: 0.7118 - val_loss: 1.9308 - val_accuracy: 0.5103\n",
+            "Epoch 8/10\n",
+            "237/237 [==============================] - 54s 225ms/step - loss: 1.0080 - accuracy: 0.7270 - val_loss: 1.9259 - val_accuracy: 0.5130\n",
+            "Epoch 9/10\n",
+            "237/237 [==============================] - 52s 218ms/step - loss: 0.9542 - accuracy: 0.7447 - val_loss: 1.8980 - val_accuracy: 0.5204\n",
+            "Epoch 10/10\n",
+            "129/237 [===============>..............] - ETA: 17s - loss: 0.9064 - accuracy: 0.7582"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SylJx2zu8WTO"
+      },
+      "source": [
+        "# Evaluate on the whole test data\n",
+        "all_classes_10_percent_fine_tune_results = model.evaluate(test_data)\n",
+        "all_classes_10_percent_fine_tune_results"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GimW9Rn19Idi"
+      },
+      "source": [
+        "# Compare the histories of feature extraction model with fine-tuning model\n",
+        "compare_historys(original_history = history_all_classes_10_percent,\n",
+        "                 new_history= history_all_classes_10_percent_fine_tune,\n",
+        "                 initial_epochs=5)"
       ],
       "execution_count": null,
       "outputs": []
