--- a/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
+++ b/06_transfer_learning_in_tensorflow-part3_scaling_up.ipynb
@@ -1172,11 +1172,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NC7OIYLUJSxq",
-        "outputId": "170b0b38-2302-413f-e2bb-f43416f6fd41",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NC7OIYLUJSxq",
+        "outputId": "170b0b38-2302-413f-e2bb-f43416f6fd41"
       },
       "source": [
         "from google.colab import drive\n",
@@ -1364,19 +1364,104 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "93IITZn5_g1f",
-        "outputId": "6ab18217-07cf-465a-ead7-cb64032f7069"
+        "outputId": "543f1eaf-d343-47b2-81cf-4713c124e0df"
       },
       "source": [
         "# Evaluate loaded model and compare performance to pre-saved model\n",
         "loaded_model_results = loaded_model.evaluate(test_data)\n",
         "loaded_model_results"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "232/790 [=======>......................] - ETA: 1:06 - loss: 1.8229 - accuracy: 0.5288"
+            "790/790 [==============================] - 93s 118ms/step - loss: 1.6270 - accuracy: 0.5768\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.6269607543945312, 0.5767524838447571]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WuRanr4_qio",
+        "outputId": "6ab75084-044c-4b1b-b83a-94b2c372153b"
+      },
+      "source": [
+        "# The results from our loaded model(above) should be very similar to the results below\n",
+        "all_classes_10_percent_fine_tune_results"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.6269607543945312, 0.5767524838447571]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AxuvUK2__0i_"
+      },
+      "source": [
+        "## Evaluating the performance of th ebig model across all different classes\n",
+        "\n",
+        "Let's make some predictions, visualize them and later find out which predictions were wrong "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrIyTvYTOROb",
+        "outputId": "674bc570-28a1-47ec-df08-63df75b30072",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/06_101_food_class_10_percent_saved_big_dog_model.zip"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-19 05:26:28--  https://storage.googleapis.com/ztm_tf_course/food_vision/06_101_food_class_10_percent_saved_big_dog_model.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.20.128, 74.125.142.128, 74.125.195.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.20.128|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 46760742 (45M) [application/zip]\n",
+            "Saving to: ‘06_101_food_class_10_percent_saved_big_dog_model.zip’\n",
+            "\n",
+            "06_101_food_class_1 100%[===================>]  44.59M   164MB/s    in 0.3s    \n",
+            "\n",
+            "2021-07-19 05:26:29 (164 MB/s) - ‘06_101_food_class_10_percent_saved_big_dog_model.zip’ saved [46760742/46760742]\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -1385,22 +1470,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-WuRanr4_qio"
+        "id": "ajL_3udtOxik"
       },
       "source": [
-        "# The results from our loaded model(above) should be very similar to the results below\n",
-        "all_classes_10_percent_fine_tune_results"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AxuvUK2__0i_"
-      },
-      "source": [
-        ""
+        "unzip_data()"
       ],
       "execution_count": null,
       "outputs": []
